# min-server

./: .gitignore  README.md
docs/: index.mdx
draftspace/socket_implementation_notes/: README.md  client.py  server.py
minhttp/: README.md  main.py  middleware.py  minhttpserver.py  pyproject.toml  request.py  requestresponse.py  response.py  router.py  socketlayer.py  socketreader.py  utils.py
minhttp/minhttp/: __init__.py  middleware.py  minhttpserver.py  request.py  response.py  router.py  socketreader.py  staticfileserver.py  utils.py
minobjectstorage/: docker-compose.yml
minobjectstorage/flaskapi/: Dockerfile
minobjectstorage/flaskapi/app/: __init__.py  config.py
minobjectstorage/flaskapi/app/routes/: __init__.py  main.py
