[tool.poetry]
name = "minhttp"
version = "0.1.0"
description = "Minimalistic HTTP server implementation"
authors = ["Louis Huang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
